[package]
name = "dpova-node"
version = "0.1.0"
edition = "2026"
authors = ["Technical Architecture Team <dev@coinnum.network>"]
description = "Production implementation of the Delegated Proof of Verified Authority consensus node."

[dependencies]
# Cryptographic Stack
blake3 = { version = "1.5", features = ["traits-preview"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bls12_381 = "0.8"
rand = "0.8"

# Networking & Wire Protocol
libp2p = { version = "0.53", features = ["gossipsub", "mdns", "noise", "tcp", "yamux"] }
prost = "0.12" # High-performance Protocol Buffers serialization

# Storage Layer
rocksdb = { version = "0.21", features = ["multi-threaded"] }

# Asynchronous Execution Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
